add delay to start trigger command

--- a/plcontrol/lantern/descriptors/errors.yml
+++ b/plcontrol/lantern/descriptors/errors.yml
@@ -28,6 +28,7 @@
 82: MODULATION_RUNNING_ERROR_CODE
 83: MODULATION_NOT_IN_FLASHING_MODE_ERROR_CODE
 84: MODULATION_CRC_ERROR_CODE
+85: TRIGGER_RUNNING_ERROR_CODE
 91: UNAUTHORIZED_FLASH_REGION_ERROR_CODE
 101: WRONG_CONFIGURATION_NUMBER_ERROR_CODE
 111: INVALID_PARAMETER_VALUE_ERROR_CODE
