--- a/plcontrol/lantern/descriptors/tc_packet_data.yml
+++ b/plcontrol/lantern/descriptors/tc_packet_data.yml
@@ -285,6 +285,19 @@ get_piezo_position:
       start: 1
       length: 0
 
+get_piezo_setpoint:
+  command_id: 46
+  format:
+    start: 0
+    length: 1
+    command_id:
+      start: 0
+      length: 1
+      format: B
+    params:
+      start: 1
+      length: 0
+
 move_piezo:
   command_id: 9
   format:
